--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,17 +2,18 @@
 
 <div class="w-full h-screen bg-zinc-300 flex items-center justify-center">
  <div class="w-96  bg-zinc-100 px-4 py-10 rounded-3xl">
- <h1 class="leading-none text-3xl text-center font-semibold text-zinc-700 tracking-tight capitalize">Welcome To Pinterest</h1>
+ <h1 class="leading-none text-3xl text-center font-semibold text-zinc-700 tracking-tight capitalize">Create Account</h1>
 
  <form action="">
 
   <input class="block border-2 w-full mt-2 px-3 py-2 rounded-xl "  type="text" name="username" placeholder="Username">
+  <input class="block border-2 w-full mt-2 px-3 py-2 rounded-xl "  type="email" name="email" placeholder="Email">
   <input class="block border-2 w-full mt-2 px-3 py-2 rounded-xl " type="password" name="password" placeholder="Password">
-  <a class=" pl-2 inline-block mt-2 text-zinc-600" href="#">Forgot Password ?</a>
-  <input class="block border-2 w-full mt-2 px-3 py-2 rounded-full bg-red-600 text-white" type="submit" value="Login">
+  <!-- <a class=" pl-2 inline-block mt-2 text-zinc-600" href="#">Forgot Password ?</a> -->
+  <input class="block border-2 w-full mt-2 px-3 py-2 rounded-full bg-red-600 text-white" type="submit" value="Create Account">
   <p class="text-zinc-600 mt-7 text-sm font-semibold text-center mx-auto w-3/4 ">By continuing, you agree to Pinterest's Terms of Service; Opens a new tab and acknowledge you've read our Privacy Policy; </p>
  </form>
- <a class="inline-block font-semibold mt-7 w-full text-center text-zinc-700 " href="/register">Don't Have An Account?</a>
+ <a class="inline-block font-semibold mt-7 w-full text-center text-zinc-700 " href="/">Already Have An Account? Login</a>
   
 </div>
 </div>
