--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,11 +25,11 @@
       class="py-3 px-5 mt-5 bg-red-700 rounded-full font-semibold text-xs"
       >Edit Profile</a
     >
-    <button
+    <a href="/add"
       class="px-3 py-3 rounded-lg bg-zinc-300 font-medium mt-5 text-red-700"
     >
       Add New Post
-    </button>
+  </a>
   </div>
 
   <div class="cards flex flex-wrap gap-10 px-10 mt-10">
@@ -37,7 +37,7 @@
       <div class="w-48 h-40 bg-white rounded-lg overflow-hidden">
         <img
           class="h-full w-full object-cover"
-          src="https://images.unsplash.com/photo-1569003339405-ea396a5a8a90?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          src="/public/images/uploads/<%=user.posts[0].image%>"
           alt=""
         />
       </div>
