--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,11 +1,11 @@
 <% include ./partials/header.ejs %>
 <div class="w-full min-h-screen bg-white py-10 px-8 text-black">
    <div class="cards flex flex-wrap gap-10">
-    <% user.posts.forEach(function(elem){ %>
+    <% posts.forEach(function(elem){ %>
         <div class="card w-32">
             <div class="w-32 h-48 bg-sky-500 rounded-lg">
                 <img class="w-full h-full object-cover overflow-hidden"
-                 src="/image/uploads/<% elem.image%>" alt="">
+                 src="/image/uploads/<%=elem.image%>" alt="">
               </div>
               <h5 class="text-xl mt-2"><%=elem.title%></h5>
         </div>
