--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
       <h3 class="font-mono text-lg">Pinterest</h3>
       <div class="flex gap-10 items-center font-sans font-semibold">
         <a class="hover:text-red-600 " href="/profile">Profile</a>
-        <a href="#" class="hover:text-red-600 ">Feed</a>
+        <a href="/feed" class="hover:text-red-600 ">Feed</a>
         <a href="/logout" class="px-3 py-1 bg-red-600 text-white rounded-lg">Logout</a>
       </div>
     </div>
