--- a/views/add.ejs
+++ b/views/add.ejs
@@ -11,4 +11,4 @@
     <input class=" text-white block mt-5 w-48 text-center border-1 bg-red-700 rounded-full " type="submit"name="" value="Create post">
   </form>
 </div>
-<% include ./partials/footer.ejs %>1
+<% include ./partials/footer.ejs %>
